# clean-hotel-backend

./: .env  Cargo.toml  Dockerfile  README.md  database.db  docker-compose.yml
migrations/2023-03-24-103744_create_rooms/: up.sql
migrations/2023-03-24-103756_create_cleaners/: down.sql  up.sql
migrations/2023-03-24-103849_create_admins/: up.sql
src/: main.rs
src/api/: admins_controller.rs  auth_controller.rs  cleaners_controller.rs  mod.rs  rooms_controller.rs  util.rs
src/auth_utils/: extraction.rs
src/db/: db.rs  mod.rs  schema.rs  util.rs
src/db/crud/: admins.rs  cleaners.rs  mod.rs  rooms.rs
src/db/models/: admins.rs  cleaner.rs  mod.rs  room.rs
src/server/: init_api.rs
